--- a/JsonGenerator.Core/JsonGenerator.Core.csproj
+++ b/JsonGenerator.Core/JsonGenerator.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -11,6 +11,7 @@
 		<PackageReference Include="JsonSchema.Net" Version="6.0.7" />
 		<PackageReference Include="JsonSchema.Net.Generation" Version="4.3.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
 	</ItemGroup>
 
 </Project>
