--- a/JsonGenerator.UI/App.config
+++ b/JsonGenerator.UI/App.config
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<appSettings>
-  <add key="BaseDirectory" value="C:\Users\ASUS\OneDrive\Desktop" />
+  <add key="BaseDirectoryName" value="C:\Users\ASUS\OneDrive\Desktop" />
   <add key="BaseFolderName" value="Codemax" />
-  <add key="ClassesFolderName" value="Classes" />
-  <add key="JsonsFolderName" value="Jsons" />
-  <add key="SchemasFolderName" value="Schemas" />
+  <add key="JsonExampleFolderName" value="Examples" />
+  <add key="JsonSchemasFolderName" value="Schemas" />
  </appSettings>
 </configuration>
