--- a/JsonGenerator.UI/JsonGenerator.UI.csproj
+++ b/JsonGenerator.UI/JsonGenerator.UI.csproj
@@ -16,6 +16,7 @@
 		<PackageReference Include="AutoBogus" Version="2.13.1" />
 		<PackageReference Include="JsonSchema.Net" Version="6.0.7" />
 		<PackageReference Include="JsonSchema.Net.Generation" Version="4.3.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.2" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
