--- a/JsonGenerator.UI/JsonGenerator.UI.csproj
+++ b/JsonGenerator.UI/JsonGenerator.UI.csproj
@@ -18,6 +18,7 @@
 		<PackageReference Include="JsonSchema.Net.Generation" Version="4.3.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.2" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Newtonsoft.Json.Schema" Version="4.0.1" />
 	</ItemGroup>
 
   <ItemGroup>
